2007-01-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_radiobutton):
	Patch from TFKyle:
	- A few M_PI slipped back in.
	- Fix for a C99ism.

2006-12-26  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box), (clearlooks_style_draw_slider):
	- Move slider darwing to clearlooks_style_draw_slider.
	- Use support macros to guard clearlooks_style_draw_box.

2006-12-26  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/lua/src/draw_lib.c: (rectangle), (arc), (luaopen_draw):
	- Add arc function.
	* engines/lua/src/lua_style.c: (lua_style_draw_box),
	(lua_style_draw_option), (lua_style_draw_vline),
	(lua_style_draw_hline):
	- Add separator and radiobutton support.

2006-12-25  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/lua/src/lua_style.c: (lua_style_push_widget_params),
	(lua_style_draw), (lua_style_draw_shadow), (lua_style_draw_box),
	(lua_style_draw_check):
	- Minor refactoring, add list view header support.

2006-12-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry):
	- Radius option fixes.

2006-12-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_spinbutton_down):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss), (clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_tab),
	(clearlooks_glossy_draw_slider_button),
	(clearlooks_glossy_draw_menuitem),
	(clearlooks_glossy_draw_selected_cell):
	- More radius works.

	* engines/support/cairo-support.c: (ge_cairo_rounded_rectangle):
	- Less warnings.

2006-12-20  Benjamin Berg  <benjamin@sipsolutions.net>
